--- a/index.html
+++ b/index.html
@@ -81,13 +81,10 @@
 
         <!-- Slide 1 -->
         <div class="carousel-item active">
-          <video id="video" autoplay loop muted class="animate__animated animate__fadeIn">
-            <source src="/media/mixkit-pink-sunset-seen-from-a-plane-window-4204.mp4">
+          <video id="video" autoplay loop muted class="animate__animated animate__fadeIn" style="position: absolute; right: 0; bottom: 0; min-width: 100%; min-height: 100%;">
+            <source src="media/mixkit-pink-sunset-seen-from-a-plane-window-4204-medium.mp4">
           </video>
-          <img id="logo" src="/media/Onways.png" alt="logo" width="25%" style="position: absolute; top: 3%; left: 36%;">
-          <h1 id="tagline" style="position:absolute; top: 35%; left: 38%; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
-            Travel Beyond Boundaries
-          </h1>
+          <img id="logo" src="/media/Onways.png" alt="logo" width="25%" style="position: absolute; top: 3%; left: 36%;" class="animate__animated animate__fadeIn">
           <div class="carousel-container">
             <div class="carousel-content animate__animated animate__fadeInUp">
               <h2>Lorem Ipsum Dolor</h2>
