--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
 
     <main id="main">
 
-      <section id="about-us" class="about-us">
+      <section id="about-us" class="about-us bg-dark" style="color: white;">
         <div class="container" data-aos="fade-up">
   
           <div class="row content">
@@ -154,7 +154,9 @@
 
     <section id="testimonials" class="testimonials section-bg">
       <div class="container">
-
+        <div class="section-title">
+          <h2>Testimonials</h2>
+        </div>
         <div class="row">
 
           <div class="col-lg-6" data-aos="fade-up">
