--- a/about.html
+++ b/about.html
@@ -90,67 +90,67 @@
         </div>
       </section>
 
-    <section id="clients" class="clients">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Clients</h2>
+      <section id="clients" class="clients">
+        <div class="container" data-aos="fade-up">
+  
+          <div class="section-title">
+            <h2>Travel partners</h2>
+          </div>
+  
+          <div class="row no-gutters clients-wrap clearfix" data-aos="fade-up">
+  
+            <div class="col-lg-3 col-md-4 col-6">
+              <div class="client-logo">
+                <img src="media/airline logos/Emirates.png" class="img-fluid" alt="" >
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-4 col-6">
+              <div class="client-logo">
+                <img src="media/airline logos/Etihad_Airways.png" class="img-fluid" alt="">
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-4 col-6">
+              <div class="client-logo">
+                <img src="media/airline logos/Qatar_Airways.png" class="img-fluid" alt="">
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-4 col-6">
+              <div class="client-logo">
+                <img src="media/airline logos/PIA.png" class="img-fluid" alt="">
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-4 col-6">
+              <div class="client-logo">
+                <img src="media/airline logos/Gulf_Air.png" class="img-fluid" alt="">
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-4 col-6">
+              <div class="client-logo">
+                <img src="media/airline logos/British_airways.png" class="img-fluid" alt="">
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-4 col-6">
+              <div class="client-logo">
+                <img src="media/airline logos/Flydubai.png" class="img-fluid" alt="">
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-4 col-6">
+              <div class="client-logo">
+                <img src="media/airline logos/Air_Arabia.png" class="img-fluid" alt="">
+              </div>
+            </div>
+  
+          </div>
+  
         </div>
-
-        <div class="row no-gutters clients-wrap clearfix" data-aos="fade-up">
-
-          <div class="col-lg-3 col-md-4 col-6">
-            <div class="client-logo">
-              <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6">
-            <div class="client-logo">
-              <img src="assets/img/clients/client-2.png" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6">
-            <div class="client-logo">
-              <img src="assets/img/clients/client-3.png" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6">
-            <div class="client-logo">
-              <img src="assets/img/clients/client-4.png" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6">
-            <div class="client-logo">
-              <img src="assets/img/clients/client-5.png" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6">
-            <div class="client-logo">
-              <img src="assets/img/clients/client-6.png" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6">
-            <div class="client-logo">
-              <img src="assets/img/clients/client-7.png" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-6">
-            <div class="client-logo">
-              <img src="assets/img/clients/client-8.png" class="img-fluid" alt="">
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section>
+      </section>
 
     <section id="testimonials" class="testimonials section-bg">
       <div class="container">
@@ -161,12 +161,10 @@
 
           <div class="col-lg-6" data-aos="fade-up">
             <div class="testimonial-item">
-              <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
               <h3>Saul Goodman</h3>
-              <h4>Ceo &amp; Founder</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                As a frequent traveler, I have high expectations when it comes to travel agencies, and this one exceeded them all. From the moment we contacted them, they were responsive, professional, and easy to work with.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -174,12 +172,10 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="testimonial-item mt-4 mt-lg-0">
-              <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
               <h3>Sara Wilsson</h3>
-              <h4>Designer</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                Our family had a fantastic experience working with this travel agency. They helped us plan a multi-generational trip that catered to everyone's interests and needs.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -187,12 +183,10 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="testimonial-item mt-4">
-              <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
               <h3>Jena Karlis</h3>
-              <h4>Store Owner</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                The team at this agency took care of everything, from flights to accommodations to activities, and made sure that every aspect of our trip was taken care of.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -200,38 +194,10 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <div class="testimonial-item mt-4">
-              <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
               <h3>Matt Brandon</h3>
-              <h4>Freelancer</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-            </div>
-          </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="testimonial-item mt-4">
-              <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-              <h3>John Larson</h3>
-              <h4>Entrepreneur</h4>
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-              </p>
-            </div>
-          </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="500">
-            <div class="testimonial-item mt-4">
-              <img src="assets/img/testimonials/testimonials-6.jpg" class="testimonial-img" alt="">
-              <h3>Emily Harison</h3>
-              <h4>Store Owner</h4>
-              <p>
-                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Eius ipsam praesentium dolor quaerat inventore rerum odio. Quos laudantium adipisci eius. Accusamus qui iste cupiditate sed temporibus est aspernatur. Sequi officiis ea et quia quidem.
+                I have used many travel agencies over the years, but none have compared to the level of service provided by this agency. We will definitely be booking with them again in the future!
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
