--- a/home.html
+++ b/home.html
@@ -34,6 +34,7 @@
           <li><a href="services.html">Services</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="login.html">Login</a></li>
         </ul>
 
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -62,30 +63,16 @@
 
           <img id="logo" src="/media/Onways.png" alt="logo" class="img-fluid rounded mx-auto d-block animate__animated animate__fadeInLeft animate__slow" width="30%" style="position: absolute; top: 1%; left: 32%;" class="animate__animated animate__fadeIn">
 
-          <h1 id="tagline" class="animate__animated animate__fadeInLeft animate__slow" style="position: absolute;top: 45%; left: 38%; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 50px;">
+          <h1 id="tagline" class="animate__animated animate__fadeInLeft animate__slow" style="position: absolute;margin-top: 20%; margin-left: 38%; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 50px;">
             Come Fly With Us
           </h1>
-        </div>
 
-        <!-- Slide 2 -->
-        <div class="carousel-item" style="background-image: url(/media/francesca-tirico-9G9vxsMzi18-unsplash.jpg);">
-          <div class="carousel-container">
-            <div class="carousel-content animate__animated animate__fadeInUp">
-              <h2>Travel Every Destination</h2>
-              <p>With Onways get ready to have a classic tour experience.</p>
-              <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
-            </div>
+          <div class="text-center" style="position: absolute; margin-top: 40%; margin-left: 45%;">
+            <a id="btn" href="services.html" class="btn-get-started" style="font-size: 20px;">
+              Get Started
+            </a>
           </div>
         </div>
-      </div>
-
-      <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
-      </a>
-
-      <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
-        <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
-      </a>
 
       <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
 
