--- a/about.html
+++ b/about.html
@@ -55,6 +55,10 @@
 
         <div class="d-flex justify-content-between align-items-center">
           <h2>About</h2>
+          <ol id="mobile-QuickNav">
+            <li><a href="home.html">Home</a></li>
+            <li>About</li>
+          </ol>
         </div>
 
       </div>
