--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,12 @@
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
 
-        <div class="d-flex">
+        <div class="d-flex justify-content-between align-items-center">
           <h2>Contact</h2>
+          <ol id="mobile-QuickNav">
+            <li><a href="home.html">Home</a></li>
+            <li>Contact</li>
+          </ol>
         </div>
 
       </div>
