--- a/pricing.html
+++ b/pricing.html
@@ -56,7 +56,7 @@
 
         <div class="d-flex justify-content-between align-items-center">
           <h2>Pricing</h2>
-          <ol>
+          <ol id="mobile-QuickNav">
             <li><a href="home.html">Home</a></li>
             <li>Pricing</li>
           </ol>
