--- a/services.html
+++ b/services.html
@@ -57,7 +57,7 @@
 
         <div class="d-flex justify-content-between align-items-center">
           <h2>Services</h2>
-          <ol>
+          <ol id="mobile-QuickNav">
             <li><a href="home.html">Home</a></li>
             <li>Services</li>
           </ol>
