--- a/login.html
+++ b/login.html
@@ -29,12 +29,12 @@
 
 			<nav id="navbar" class="navbar order-last order-lg-0">
 				<ul>
-					<li><a href="home.html" class="active">Home</a></li>
+					<li><a href="home.html">Home</a></li>
 					<li><a href="about.html">About Us</a></li>
 					<li><a href="services.html">Services</a></li>
 					<li><a href="pricing.html">Pricing</a></li>
 					<li><a href="contact.html">Contact</a></li>
-					<li><a href="login.html">Login</a></li>
+					<li><a href="login.html" class="active">Sign In</a></li>
 				</ul>
 
 				<i class="bi bi-list mobile-nav-toggle"></i>
