--- a/pricing.html
+++ b/pricing.html
@@ -34,6 +34,7 @@
           <li><a href="services.html">Services</a></li>
           <li><a href="pricing.html" class="active">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="login.html">Login</a></li>
         </ul>
 
         <i class="bi bi-list mobile-nav-toggle"></i>
