--- a/services.html
+++ b/services.html
@@ -35,6 +35,7 @@
           <li><a href="services.html" class="active">Services</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="login.html">Login</a></li>
         </ul>
 
         <i class="bi bi-list mobile-nav-toggle"></i>
