--- a/signup.html
+++ b/signup.html
@@ -1,17 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Onways Travels - Login</title>
+	<title>Onways Travels - SignUp</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="/media/favicon.png"/>
 
 	<link rel="stylesheet" type="text/css" href="/assets/css/util.css">
 	<link rel="stylesheet" type="text/css" href="/assets/css/form.css">
+
+	<link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
+	<link href="assets/vendor/aos/aos.css" rel="stylesheet">
+	<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+	<link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+	<link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+	<link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+	<link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+	<link href="assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
-	
+	<header id="header" class="fixed-top">
+		<div class="container d-flex align-items-center">
+
+			<h1 class="logo me-auto"><a href="home.html"><span>OnWays</span> Travels</a></h1>
+
+			<nav id="navbar" class="navbar order-last order-lg-0">
+				<ul>
+					<li><a href="home.html" class="active">Home</a></li>
+					<li><a href="about.html">About Us</a></li>
+					<li><a href="services.html">Services</a></li>
+					<li><a href="pricing.html">Pricing</a></li>
+					<li><a href="contact.html">Contact</a></li>
+					<li><a href="login.html" class="active">Login</a></li>
+				</ul>
+
+				<i class="bi bi-list mobile-nav-toggle"></i>
+			</nav>
+
+			<div class="header-social-links d-flex">
+				<a href="#" class="twitter"><i class="bu bi-twitter"></i></a>
+				<a href="#" class="facebook"><i class="bu bi-facebook"></i></a>
+				<a href="#" class="instagram"><i class="bu bi-instagram"></i></a>
+				<a href="#" class="linkedin"><i class="bu bi-linkedin"></i></i></a>
+			</div>
+
+		</div>
+	</header>
+
+	<section id="breadcrumbs" class="breadcrumbs">
+		<div class="container">
+
+			<div class="d-flex justify-content-between align-items-center">
+				<h2>Sign Up</h2>
+				<ol id="mobile-QuickNav">
+					<li><a href="home.html">Home</a></li>
+					<li>About</li>
+				</ol>
+			</div>
+
+		</div>
+	</section>
+
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
@@ -38,6 +90,15 @@
 
 					<br>
 
+					<div class="form-check" data-validate = "Check To Continue">
+						<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+						<label class="form-check-label" for="flexCheckDefault">
+						  I confirm that I am willing to share my <span class="text-danger">Name</span> and <span class="text-danger">Email</span> under <a class="link-danger" href="privacy.html">Fair Use Policy</a>
+						</label>
+					  </div>
+
+					<br>
+
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
 							Sign Up
@@ -57,6 +118,58 @@
 			</div>
 		</div>
 	</div>
+
+	<footer id="footer">
+		<div class="footer-top">
+			<div class="container">
+				<div class="row">
+
+					<div class="col-lg-3 col-md-6 footer-contact">
+						<h3>Onways Travels</h3>
+						<p>
+							63-H DHA Phase 6 <br>
+							Lahore<br>
+							Pakistan <br><br>
+							<strong>Phone:</strong> +92 0900 786 01 <br>
+							<strong>Email:</strong> onways.travel@tours.com<br>
+						</p>
+					</div>
+
+					<div class="col-lg-2 col-md-6 footer-links">
+						<h4>Useful Links</h4>
+						<ul>
+							<li><i class="bx bx-chevron-right"></i> <a href="home.html">Home</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="services.html">Services</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="privacy.html">Privacy policy</a></li>
+						</ul>
+					</div>
+
+					<div class="col-lg-4 col-md-6 footer-newsletter">
+						<h4>Join Our Newsletter</h4>
+						<form action="" method="post">
+							<input type="email" name="email"><input type="submit" value="Subscribe">
+						</form>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+		<div class="container d-md-flex py-4">
+
+			<div class="me-md-auto text-center text-md-start">
+				<div class="copyright">
+					&copy; Copyright <strong><span>Onways Travels</span></strong>. All Rights Reserved
+				</div>
+				<div class="social-links text-center text-md-right pt-3 pt-md-0">
+					<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+					<a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+					<a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+					<a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+				</div>
+			</div>
+	</footer>
 	
 	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
 	<script src="vendor/animsition/js/animsition.min.js"></script>
