--- a/privacy.html
+++ b/privacy.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>About Us - Onways Travels</title>
+  <title>Privacy Policy - Onways Travels</title>
   <link href="media/favicon.png" rel="icon">
 
 
