--- a/signup.html
+++ b/signup.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>Onways Travels - SignUp</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="/media/favicon.png"/>
+	<link rel="icon" href="/media/favicon.png" />
 
 	<link rel="stylesheet" type="text/css" href="/assets/css/util.css">
 	<link rel="stylesheet" type="text/css" href="/assets/css/form.css">
@@ -83,19 +84,21 @@
 					</div>
 
 
-					<div class="wrap-input100 validate-input" data-validate = "Please enter password">
+					<div class="wrap-input100 validate-input" data-validate="Please enter password">
 						<input class="input100" type="password" name="pass" placeholder="Password">
 						<span class="focus-input100"></span>
 					</div>
 
 					<br>
 
-					<div class="form-check" data-validate = "Check To Continue">
+					<div class="form-check" data-validate="Check To Continue">
 						<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
 						<label class="form-check-label" for="flexCheckDefault">
-						  I confirm that I am willing to share my <span class="text-danger">Name</span> and <span class="text-danger">Email</span> under <a class="link-danger" href="privacy.html">Fair Use Policy</a>
+							I confirm that I am willing to share my <span class="text-danger">Name</span> and
+							<span class="text-danger">Email</span> under <a class="link-danger" href="privacy.html">Fair
+								Use Policy</a>
 						</label>
-					  </div>
+					</div>
 
 					<br>
 
@@ -170,7 +173,7 @@
 				</div>
 			</div>
 	</footer>
-	
+
 	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
 	<script src="vendor/animsition/js/animsition.min.js"></script>
 	<script src="vendor/bootstrap/js/popper.js"></script>
@@ -182,4 +185,5 @@
 	<script src="js/main.js"></script>
 
 </body>
+
 </html>
