--- a/services.html
+++ b/services.html
@@ -248,7 +248,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Onways Travels</h3>
+            <h3><span><strong>Onways</strong></span> Travels</h3>
             <p>
               63-H DHA Phase 6 <br>
               Lahore<br>
