--- a/signup.html
+++ b/signup.html
@@ -74,28 +74,28 @@
 					</span>
 
 					<div class="wrap-input100 validate-input m-b-16" data-validate="Please enter Email">
-						<input class="input100" type="email" name="email" placeholder="Email">
+						<input class="input100" type="email" name="email" placeholder="Email" required>
 						<span class="focus-input100"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input m-b-16" data-validate="Please enter username">
-						<input class="input100" type="text" name="username" placeholder="Username">
+						<input class="input100" type="text" name="username" placeholder="Username" required>
 						<span class="focus-input100"></span>
 					</div>
 
 
 					<div class="wrap-input100 validate-input" data-validate="Please enter password">
-						<input class="input100" type="password" name="pass" placeholder="Password">
+						<input class="input100" type="password" name="pass" placeholder="Password" required>
 						<span class="focus-input100"></span>
 					</div>
 
 					<br>
 
 					<div class="form-check" data-validate="Check To Continue">
-						<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+						<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" required>
 						<label class="form-check-label" for="flexCheckDefault">
 							I confirm that I am willing to share my <span class="text-danger">Name</span> and
-							<span class="text-danger">Email</span> under <a class="link-danger" href="privacy.html">Fair
+							<span class="text-danger">Email</span> under <a class="link-danger text-decoration-underline" href="privacy.html">Fair
 								Use Policy</a>
 						</label>
 					</div>
@@ -128,7 +128,7 @@
 				<div class="row">
 
 					<div class="col-lg-3 col-md-6 footer-contact">
-						<h3>Onways Travels</h3>
+						<h3><span><strong>Onways</strong></span> Travels</h3>
 						<p>
 							63-H DHA Phase 6 <br>
 							Lahore<br>
