--- a/home.html
+++ b/home.html
@@ -63,8 +63,8 @@
 
           <img id="logo" src="/media/Onways.png" alt="logo" class="img-fluid rounded mx-auto d-block animate__animated animate__fadeInLeft animate__slow" width="30%" style="position: absolute; top: 1%; left: 32%;" class="animate__animated animate__fadeIn">
 
-          <h1 id="tagline" class="animate__animated animate__fadeInLeft animate__slow" style="position: absolute;margin-top: 20%; margin-left: 38%; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 50px;">
-            Come Fly With Us
+          <h1 id="tagline" class="animate__animated animate__fadeInLeft animate__slow text-black" style="position: absolute;margin-top: 20%; margin-left: 38%; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 50px;">
+            "Experience the world with us"
           </h1>
 
           <div class="text-center" style="position: absolute; margin-top: 40%; margin-left: 45%;">
