--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
 					<li><a href="services.html">Services</a></li>
 					<li><a href="pricing.html">Pricing</a></li>
 					<li><a href="contact.html">Contact</a></li>
-					<li><a href="login.html" class="active">Sign In</a></li>
+					<li><a href="login.html" class="active">LogIn</a></li>
 				</ul>
 
 				<i class="bi bi-list mobile-nav-toggle"></i>
