--- a/privacy.html
+++ b/privacy.html
@@ -64,7 +64,7 @@
           <h2>Privacy Policy</h2>
           <ol id="mobile-QuickNav">
             <li><a href="home.html">Home</a></li>
-            <li>About</li>
+            <li>Privacy Policy</li>
           </ol>
         </div>
 
