--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
     <div class="container d-flex align-items-center">
 
       <h1 class="logo me-auto"><a href="home.html"><span>OnWays</span> Travels</a></h1>
-      
+
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a href="home.html" class="active">Home</a></li>
@@ -54,29 +54,35 @@
     <div id="heroCarousel" data-bs-interval="10000" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner" role="listbox">
 
-        <!-- Slide 1 -->
         <div class="carousel-item active">
           <video id="video" autoplay loop muted class="animate__animated animate__fadeIn"
             style="position: absolute; right: 0; bottom: 0; min-width: 100%; min-height: 100%;">
             <source src="media/mixkit-pink-sunset-seen-from-a-plane-window-4204-medium.mp4">
           </video>
 
-          <img id="logo" src="/media/Onways.png" alt="logo" class="img-fluid rounded mx-auto d-block animate__animated animate__fadeInLeft animate__slow" width="30%" style="position: absolute; top: 1%; left: 32%;" class="animate__animated animate__fadeIn">
+          <div id="logo" class="animate__animated animate__fadeInLeft animate__slow"
+            style="position: absolute; margin-top: 2%; margin-left: 30%;">
+            <img src="/media/Onways.png" alt="logo" width="40%">
+          </div>
 
-          <h1 id="tagline" class="animate__animated animate__fadeInLeft animate__slow text-black" style="position: absolute;margin-top: 20%; margin-left: 38%; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 50px;">
-            "Experience the world with us"
-          </h1>
+          <div id="tagline"
+            style="position: absolute;margin-top: 20%; margin-left: 38%; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 50px;">
+            <h1 class="animate__animated animate__fadeInLeft animate__slow text-black">
+              "Experience the world with us"
+            </h1>
+          </div>
 
-          <div class="text-center" style="position: absolute; margin-top: 40%; margin-left: 45%;">
-            <a id="btn" href="services.html" class="btn-get-started" style="font-size: 20px;">
+
+          <div id="btn" class="text-center" style="position: absolute; margin-top: 38%; margin-left: 46%;">
+            <a href="services.html" class="btn-get-started" style="font-size: 20px;">
               Get Started
             </a>
           </div>
         </div>
 
-      <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
+        <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
 
-    </div>
+      </div>
   </section>
 
   <main id="main">
@@ -87,7 +93,7 @@
         <div class="row content" style="color: white;">
           <div class="col-lg-6" data-aos="fade-right">
             <h2>
-              With 
+              With
               <span style="color:#1bbd36;">
                 ONWAYS
               </span>
@@ -127,7 +133,7 @@
 
           <div class="col-lg-3 col-md-4 col-6">
             <div class="client-logo">
-              <img src="media/airline logos/Emirates.png" class="img-fluid" alt="" >
+              <img src="media/airline logos/Emirates.png" class="img-fluid" alt="">
             </div>
           </div>
 
