--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
 
 			<nav id="navbar" class="navbar order-last order-lg-0">
 				<ul>
-					<li><a href="home.html" class="active">Home</a></li>
+					<li><a href="home.html">Home</a></li>
 					<li><a href="about.html">About Us</a></li>
 					<li><a href="services.html">Services</a></li>
 					<li><a href="pricing.html">Pricing</a></li>
