--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 
-  <title>ONWays Travels</title>
+  <title>Home - Onways Travels</title>
   <link href="media/favicon.png" rel="icon">
 
   <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
