--- a/services.html
+++ b/services.html
@@ -67,10 +67,10 @@
       </div>
     </section>
 
-    <section id="services" class="services section-bg">
+    <section id="services">
 
       <div class="container" data-aos="fade-up">
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 justify-content-center">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
 
           <!-- Card 1 -->
           <div class="col">
