--- a/signup.html
+++ b/signup.html
@@ -51,24 +51,10 @@
 		</div>
 	</header>
 
-	<section id="breadcrumbs" class="breadcrumbs">
-		<div class="container">
-
-			<div class="d-flex justify-content-between align-items-center">
-				<h2>Sign Up</h2>
-				<ol id="mobile-QuickNav">
-					<li><a href="home.html">Home</a></li>
-					<li>About</li>
-				</ol>
-			</div>
-
-		</div>
-	</section>
-
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
-				<form class="login100-form validate-form p-l-55 p-r-55 p-t-178">
+				<form class="login100-form validate-form p-l-55 p-r-55 p-t-170">
 					<span class="login100-form-title">
 						Become a Member
 					</span>
@@ -92,10 +78,9 @@
 					<br>
 
 					<div class="form-check" data-validate="Check To Continue">
-						<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" required>
-						<label class="form-check-label" for="flexCheckDefault">
-							I confirm that I am willing to share my <span class="text-danger">Name</span> and
-							<span class="text-danger">Email</span> under <a class="link-danger text-decoration-underline" href="privacy.html">Fair
+						<input class="form-check-input" type="checkbox" value="" id="flexCheck" required>
+						<label class="form-check-label" for="flexCheck">
+							I confirm that I am willing to share my information under <a class="link-danger text-decoration-underline" href="privacy.html">Fair
 								Use Policy</a>
 						</label>
 					</div>
@@ -108,7 +93,7 @@
 						</button>
 					</div>
 
-					<div class="flex-col-c p-t-170 p-b-40">
+					<div class="flex-col-c p-t-70 p-b-40">
 						<span class="txt1 p-b-9">
 							Already have an account?
 						</span>
