--- a/signup.html
+++ b/signup.html
@@ -35,7 +35,7 @@
 					<li><a href="services.html">Services</a></li>
 					<li><a href="pricing.html">Pricing</a></li>
 					<li><a href="contact.html">Contact</a></li>
-					<li><a href="login.html" class="active">Login</a></li>
+					<li><a href="login.html" class="active">LogIn</a></li>
 				</ul>
 
 				<i class="bi bi-list mobile-nav-toggle"></i>
