--- a/home.html
+++ b/home.html
@@ -32,17 +32,16 @@
           <li><a href="home.html" class="active">Home</a></li>
           <li><a href="about.html">About Us</a></li>
 
-          <li class="dropdown"><a href="services.html"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="packages.html"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="team.html">Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
+              <li><a href="packages.html">Packages</a></li>
+              <li><a href="about.html">Destinations</a></li>
             </ul>
           </li>
 
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li class="dropdown"><a href="login.html"><span>Become a member</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="login.html"><span>Member</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="login.html">Login</a></li>
               <li><a href="signup.html">Sign Up</a></li>
@@ -87,7 +86,7 @@
 
 
           <div id="btn" class="text-center" style="position: absolute; margin-top: 38%; margin-left: 46%;">
-            <a href="services.html" class="btn-get-started" style="font-size: 20px;">
+            <a href="packages.html" class="btn-get-started" style="font-size: 20px;">
               Get Started
             </a>
           </div>
@@ -219,7 +218,7 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="home.html">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services.html">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="packages.html">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="privacy.html">Privacy policy</a></li>
             </ul>
           </div>
