--- a/packages.html
+++ b/packages.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Services - Onways Travels</title>
+  <title>Travel Packages - Onways Travels</title>
 
   <link href="media/favicon.png" rel="icon">
 
@@ -32,15 +32,27 @@
         <ul>
           <li><a href="home.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
-          <li><a href="services.html" class="active">Services</a></li>
+
+          <li class="dropdown"><a href="packages.html" class="active"><span>Services</span> <i
+                class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="packages.html" class="active">Packages</a></li>
+              <li><a href="about.html">Destinations</a></li>
+            </ul>
+          </li>
+
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="login.html">Login</a></li>
+          <li class="dropdown"><a href="login.html"><span>Member</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="login.html">Login</a></li>
+              <li><a href="signup.html">Sign Up</a></li>
+            </ul>
+          </li>
         </ul>
 
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav>
-
 
       <div class="header-social-links d-flex">
         <a href="#" class="twitter"><i class="bu bi-twitter"></i></a>
@@ -61,18 +73,31 @@
           <ol id="mobile-QuickNav">
             <li><a href="home.html">Home</a></li>
             <li>Services</li>
+            <li>Packages</li>
           </ol>
         </div>
 
       </div>
     </section>
 
-    <div class="bg-dark">
-      <p class="pt-5 pb-5 p-3 text-light" style="font-size: 20px;font-family:Arial, Helvetica, sans-serif;text-align: justify;">
-      At <b style="color: #1bbd36;">Onways</b>, we're dedicated to providing you with an unforgettable
-      travel experience. Our team of travel experts is dedicated to ensuring that every trip is tailored to our
-      clients' unique needs and preferences.
-      </p>
+
+    <div class="bg-dark p-4 pt-lg-5 pt-md-5" id="open-p">
+      <h1 class="pt-5 p-2 bi-airplane" style="color: #1bbd36;">
+        Travel Packages
+      </h1>
+
+      <div style="font-size: 20px;font-family:Arial, Helvetica, sans-serif;text-align: justify;" id="desc">
+        <p class="pt-2 pb-3 p-3 text-light">
+          At <b style="color: #1bbd36;">Onways</b>, we're dedicated to providing you with an unforgettable
+          travel experience.<br><br>
+          Our travel packages are designed to give you the best travel experiences possible, whether you are
+          traveling solo, as a couple, or with family and friends. <br><br>
+          We have carefully curated our travel packages to include the most popular destinations and activities around the
+          world. Our packages are flexible, and we can customize them to suit your specific needs and preferences. <br><br>
+          Our travel packages include flights, accommodations, meals, and transportation, so you don't have to worry about
+          anything.
+        </p>
+      </div>
     </div>
 
     <section id="services">
@@ -234,7 +259,7 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="home.html">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services.html">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="packages.html">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="privacy.html">Privacy policy</a></li>
             </ul>
           </div>
