--- a/about.html
+++ b/about.html
@@ -31,10 +31,22 @@
         <ul>
           <li><a href="home.html">Home</a></li>
           <li><a href="about.html" class="active">About Us</a></li>
-          <li><a href="services.html">Services</a></li>
+
+          <li class="dropdown"><a href="packages.html"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="packages.html">Packages</a></li>
+              <li><a href="about.html">Destinations</a></li>
+            </ul>
+          </li>
+
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="login.html">Login</a></li>
+          <li class="dropdown"><a href="login.html"><span>Member</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="login.html">Login</a></li>
+              <li><a href="signup.html">Sign Up</a></li>
+            </ul>
+          </li>
         </ul>
 
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -236,7 +248,7 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="home.html">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="services.html">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="packages.html">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="privacy.html">Privacy policy</a></li>
             </ul>
           </div>
