--- a/contact.html
+++ b/contact.html
@@ -32,10 +32,22 @@
         <ul>
           <li><a href="home.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
-          <li><a href="services.html">Services</a></li>
+
+          <li class="dropdown"><a href="packages.html"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="packages.html">Packages</a></li>
+              <li><a href="about.html">Destinations</a></li>
+            </ul>
+          </li>
+
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html" class="active">Contact</a></li>
-          <li><a href="login.html">Login</a></li>
+          <li class="dropdown"><a href="login.html"><span>Member</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="login.html">Login</a></li>
+              <li><a href="signup.html">Sign Up</a></li>
+            </ul>
+          </li>
         </ul>
 
         <i class="bi bi-list mobile-nav-toggle"></i>
