--- a/privacy.html
+++ b/privacy.html
@@ -18,13 +18,6 @@
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <style>
-    span{
-      font-size: 20px;
-    }
-  </style>
-
 </head>
 
 <body>
@@ -37,10 +30,22 @@
         <ul>
           <li><a href="home.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
-          <li><a href="services.html">Services</a></li>
+
+          <li class="dropdown"><a href="packages.html"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="packages.html">Packages</a></li>
+              <li><a href="about.html">Destinations</a></li>
+            </ul>
+          </li>
+
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="login.html">Login</a></li>
+          <li class="dropdown"><a href="login.html"><span>Member</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="login.html">Login</a></li>
+              <li><a href="signup.html">Sign Up</a></li>
+            </ul>
+          </li>
         </ul>
 
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -77,6 +82,10 @@
         <div class="container" data-aos="fade-right">
 
           <div class="row content">
+
+            <h1 class="bi-shield-check p-3" style="color: #1bbd36;">
+              Privacy Policy
+            </h1>
             <div class="col-lg-12 pt-4 pt-lg-0">
               <p>
                 Thank you for choosing our travel agency. We respect your privacy and are committed to protecting your
@@ -88,7 +97,7 @@
               <ul>
                 <li>
                   <i class="ri-check-double-line"></i>
-                  <span class="text-success">
+                  <span class="title">
                     Information Collection
                   </span>
                   <br>
@@ -99,7 +108,7 @@
 
                 <li>
                   <i class="ri-check-double-line"></i>
-                  <span class="text-success">
+                  <span class="title">
                     Information Use
                   </span>
                   <br>
@@ -110,7 +119,7 @@
 
                 <li>
                   <i class="ri-check-double-line"></i>
-                  <span class="text-success">
+                  <span class="title">
                     Information Disclosure
                   </span>
                   <br>
@@ -124,7 +133,7 @@
 
                 <li>
                   <i class="ri-check-double-line"></i>
-                  <span class="text-success">
+                  <span class="title">
                     Data Security
                   </span>
                   <br>
@@ -135,7 +144,7 @@
 
                 <li>
                   <i class="ri-check-double-line"></i>
-                  <span class="text-success">
+                  <span class="title">
                     External Links
                   </span>
                   <br>
@@ -146,7 +155,7 @@
 
                 <li>
                   <i class="ri-check-double-line"></i>
-                  <span class="text-success">
+                  <span class="title">
                     Changes to this Privacy Policy
                   </span>
                   <br>
