--- a/login.html
+++ b/login.html
@@ -37,10 +37,11 @@
 						<ul>
 							<li><a href="services.html">Packages</a></li>
 							<li><a href="about.html">Destinations</a></li>
+							<li><a href="insurance.html">Travel Insurance</a></li>
 						</ul>
 					</li>
 
-					<li><a href="pricing.html">Pricing</a></li>
+					<li><a href="booking.html">Book Now</a></li>
 					<li><a href="contact.html">Contact</a></li>
 					<li class="dropdown"><a href="login.html" class="active"><span>Member</span> <i
 								class="bi bi-chevron-down"></i></a>
