--- a/packages.html
+++ b/packages.html
@@ -38,10 +38,11 @@
             <ul>
               <li><a href="packages.html" class="active">Packages</a></li>
               <li><a href="about.html">Destinations</a></li>
+              <li><a href="insurance.html">Travel Insurance</a></li>
             </ul>
           </li>
 
-          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="booking.html">Book Now</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li class="dropdown"><a href="login.html"><span>Member</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -92,9 +93,12 @@
           travel experience.<br><br>
           Our travel packages are designed to give you the best travel experiences possible, whether you are
           traveling solo, as a couple, or with family and friends. <br><br>
-          We have carefully curated our travel packages to include the most popular destinations and activities around the
-          world. Our packages are flexible, and we can customize them to suit your specific needs and preferences. <br><br>
-          Our travel packages include flights, accommodations, meals, and transportation, so you don't have to worry about
+          We have carefully curated our travel packages to include the most popular destinations and activities around
+          the
+          world. Our packages are flexible, and we can customize them to suit your specific needs and preferences.
+          <br><br>
+          Our travel packages include flights, accommodations, meals, and transportation, so you don't have to worry
+          about
           anything.
         </p>
       </div>
