--- a/about.html
+++ b/about.html
@@ -36,10 +36,11 @@
             <ul>
               <li><a href="packages.html">Packages</a></li>
               <li><a href="about.html">Destinations</a></li>
+              <li><a href="insurance.html">Travel Insurance</a></li>
             </ul>
           </li>
 
-          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="booking.html">Book Now</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li class="dropdown"><a href="login.html"><span>Member</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -76,6 +77,7 @@
 
       </div>
     </section>
+  </main>
 
     <main id="main">
 
