--- a/booking.html
+++ b/booking.html
@@ -12,10 +12,6 @@
     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400" rel="stylesheet">
 
     <link href="assets/css/booking.css" rel="stylesheet">
@@ -81,9 +77,10 @@
 
             </div>
         </section>
+
         <section style="background-image: url('/media/background.jpg');background-size: cover;
         background-position: center;">
-            <div id="booking" class="section">
+            <div id="booking" class="section" data-aos="fade-up">
                 <div class="section-center">
                     <div class="container">
                         <div class="row">
@@ -269,6 +266,10 @@
                 </div>
             </div>
     </footer>
+
+    <script src="assets/vendor/aos/aos.js"></script>
+	<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+	<script src="assets/js/main.js"></script>
 </body>
 
 </html>
