--- a/home.html
+++ b/home.html
@@ -68,13 +68,12 @@
       <div class="carousel-inner" role="listbox">
 
         <div class="carousel-item active">
-          <video id="video" autoplay loop muted class="animate__animated animate__fadeIn"
+          <video id="video" autoplay loop muted
             style="position: absolute; right: 0; bottom: 0; min-width: 100%; min-height: 100%;">
             <source src="media/mixkit-pink-sunset-seen-from-a-plane-window-4204-medium.mp4">
           </video>
 
-          <div id="logo" class="animate__animated animate__fadeInLeft animate__slow"
-            style="position: absolute; margin-top: 2%; margin-left: 30%;">
+          <div id="logo" style="position: absolute; margin-top: 2%; margin-left: 30%;">
             <img src="/media/Onways.png" alt="logo" width="40%">
           </div>
 
