--- a/login.html
+++ b/login.html
@@ -7,16 +7,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="/media/favicon.png" />
 
-	<link rel="stylesheet" type="text/css" href="/assets/css/util.css">
-	<link rel="stylesheet" type="text/css" href="/assets/css/form.css">
+	<link rel="stylesheet" href="/assets/css/util.css">
+	<link rel="stylesheet" href="/assets/css/form.css">
 	<link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
 	<link href="assets/vendor/aos/aos.css" rel="stylesheet">
 	<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
 	<link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-	<link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 	<link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-	<link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
 	<link href="assets/css/style.css" rel="stylesheet">
 </head>
@@ -67,7 +65,7 @@
 
 	<div class="limiter">
 		<div class="container-login100">
-			<div class="wrap-login100">
+			<div class="wrap-login100" data-aos="fade-up">
 				<form class="login100-form validate-form p-l-55 p-r-55 p-t-170">
 					<span class="login100-form-title">
 						Sign In
@@ -167,12 +165,6 @@
 
 	<script src="assets/vendor/aos/aos.js"></script>
 	<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-	<script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-	<script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-	<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-	<script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-	<script src="assets/vendor/php-email-form/validate.js"></script>
-
 	<script src="assets/js/main.js"></script>
 
 </body>
