--- a/packages.html
+++ b/packages.html
@@ -14,9 +14,7 @@
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <link href="assets/css/style.css" rel="stylesheet">
 </head>
@@ -88,7 +86,7 @@
       </h1>
 
       <div style="font-size: 20px;font-family:Arial, Helvetica, sans-serif;text-align: justify;" id="desc">
-        <p class="pt-2 pb-3 p-3 text-light">
+        <p class="pt-2 pb-3 p-3 text-light" data-aos="fade-right">
           At <b style="color: #1bbd36;">Onways</b>, we're dedicated to providing you with an unforgettable
           travel experience.<br><br>
           Our travel packages are designed to give you the best travel experiences possible, whether you are
@@ -299,12 +297,6 @@
 
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-
   <script src="assets/js/main.js"></script>
 
 </body>
