--- a/booking.html
+++ b/booking.html
@@ -118,23 +118,19 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <span class="form-label">Source</span>
+                                                <span class="form-label">Select a Package</span>
                                                 <select class="form-control">
-                                                    <option>Lahore, Pakistan</option>
-                                                    <option>Karachi, Pakistan</option>
-                                                    <option>Islamabad, Pakistan</option>
                                                     <option>Qatar</option>
                                                     <option>Dubai</option>
-                                                    <option>London</option>
-                                                    <option>USA</option>
-                                                    <option>Baku</option>
+                                                    <option>Turkey</option>
+                                                    <option>World Tour</option>
                                                 </select>
                                                 <span class="select-arrow" id="arrow"></span>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <span class="form-label">Destination</span>
+                                                <span class="form-label">Your Country</span>
                                                 <select class="form-control">
                                                     <option>Lahore, Pakistan</option>
                                                     <option>Karachi, Pakistan</option>
@@ -143,7 +139,7 @@
                                                     <option selected>Dubai</option>
                                                     <option>London</option>
                                                     <option>USA</option>
-                                                    <option>Baku</option>
+                                                    <option>Turkey</option>
                                                 </select>
                                                 <span class="select-arrow" id="arrow"></span>
                                             </div>
