--- a/packages.html
+++ b/packages.html
@@ -102,48 +102,62 @@
       </div>
     </div>
 
-    <section id="services">
+    <section id="packages">
       <div class="container" data-aos="fade-up">
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2">
 
           <!-- Card 1 -->
-          <div class="col">
-            <div class="services card" style="width: 20rem;">
-              <img src="..." class="card-img-top" alt="...">
+          <div class="col pb-lg-5">
+            <div class="services card">
+              <img src="/media/packages/dubai.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Dubai City Tour</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's
                   content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="booking.html" class="btn btn-primary">Book Now</a>
               </div>
             </div>
           </div>
 
           <!-- Card 2 -->
           <div class="col">
-            <div class="services card" style="width: 20rem;">
-              <img src="..." class="card-img-top" alt="...">
+            <div class="services card">
+              <img src="/media/packages/qatar.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Qatar Tour</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's
                   content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="booking.html" class="btn btn-primary">Book Now</a>
               </div>
             </div>
           </div>
 
           <!-- Card 3 -->
           <div class="col">
-            <div class="services card" style="width: 20rem;">
-              <img src="..." class="card-img-top" alt="...">
+            <div class="services card">
+              <img src="/media/packages/turkey.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Turkey Tour</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                   card's
                   content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="booking.html" class="btn btn-primary">Book Now</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Card 4 -->
+          <div class="col">
+            <div class="services card">
+              <img src="/media/packages/world tour.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">World Tour</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                  card's
+                  content.</p>
+                <a href="booking.html" class="btn btn-primary">Book Now</a>
               </div>
             </div>
           </div>
